------------
- Added Dutch translation
- Added Czech translation

Bug Fixes
---------
- Fix issue if Unicode characters in options
- Fix issues with migrations and content types
- Resolve Paypal unneeded dependency on subscription product
- Make sure "all valid" discounts are correctly applied
- Fix Wishlish ajax add view
- Ensure that product variation properly inherits shipping from its parent
- Made a couple of view and template changes to reduce the number of SQL queries per page
- Handling of gift certificate plus other payments fixed
- Bug in tax processor rendering fixed
- Bug in autosuccess payment module fixed
- Rebuild pricing was deleting prices if multiple sites were being used
- Currency template tags handles decimal places parameter correctly
- Improve robustness of South migrations
- Fix obscure issue where some users were able to edit the wrong information
- Add a new config for the persistent cart to provide more options for how it handles returning users
- Remove custom read only widget use and use Django's newer read only field
- Paypal was not saving contact information correctly in certain cases

Performance Improvements
------------------------
- Tweaks to price queries to reduce unneeded queries


Migration Notes
---------------

CSRF
++++
As of `rev 1999 <http://bitbucket.org/chris1610/satchmo/changeset/a624c8018f52>`_, Satchmo supports the newest Django 1.2 Cross Site Request Forgery (CSRF)
protection. You are encouraged to read more about it int the `Django docs <http://docs.djangoproject.com/en/dev/ref/contrib/csrf/>`_

If you have an existing Satchmo store and need to support CSRF, you will need to do a couple of things:

    1. Upgrade to Django 1.2.3 or greater
    2. Ensure 'django.middleware.csrf.CsrfViewMiddleware' is in your MIDDLEWARE_CLASSES
    3. Ensure that any forms in your custom templates, have {% csrf_token %} inside the <form> element
    
Messages
++++++++